2007-01-14 [colin]	2.7.0cvs24

	* src/etpan/imap-thread.c
		Maybe fix new reconnection issues

2007-01-13 [colin]	2.7.0cvs23

	* src/summaryview.c
		Freeze/thaw on thread selection

2007-01-13 [paul]	2.7.0cvs22

	* src/mainwindow.c
	* src/summaryview.c
	* src/summaryview.h
		add 'Edit/Delete thread'

2007-01-13 [colin]	2.7.0cvs21

	* src/prefs_account.c
	* src/prefs_compose_writing.c
	* src/prefs_message.c
	* src/prefs_msg_colors.c
	* src/prefs_other.c
	* src/prefs_receive.c
	* src/prefs_spelling.c
	* src/prefs_summaries.c
	* src/prefs_themes.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Factorize gtk frame creation
		Patch by Pawel

2007-01-13 [colin]	2.7.0cvs20

	* src/message_search.c
	* src/summary_search.c
		Fix Enter in search windows
	* src/messageview.c
		Fix body search starting at the
		end of the mail (and asking for loop)

2007-01-13 [colin]	2.7.0cvs19

	* src/etpan/imap-thread.c
		Make sure we don't free the same imap
		twice

2007-01-13 [colin]	2.7.0cvs18

	* commitHelper
		Allow multiple commitHelpers to
		run at once

2007-01-12 [colin]	2.7.0cvs17

	* src/etpan/imap-thread.c
		Make sure we get rid of the previous mailimap
		when connecting - just in case disconnect was
		unclean

2007-01-12 [paul]	2.7.0cvs16

	* src/compose.c
		Strip S/MIME signatures when re-editing
		S/MIME signed messages.

2007-01-12 [paul]	2.7.0cvs15

	* configure.ac
	* src/addressbook.c
	* src/foldersel.c
	* src/folderview.c
	* src/main.c
		no need to define CLAWS anymore, remove
		all that stuff

2007-01-12 [paul]	2.7.0cvs14

	* src/mimeview.c
		check if the mail's signed as
		it can change the mail structure
		Thanks to Colin

2007-01-12 [paul]	2.7.0cvs13

	* src/procmime.c
		fix Forwarding msgs with attachments
		that have dos line endings
		Thanks to Colin

2007-01-12 [wwp]	2.7.0cvs12

	* configure.ac
		Revert accidentally committed extra version tag.

2007-01-12 [wwp]	2.7.0cvs11
